# c415-ai-service

./: Dockerfile  pyproject.toml  requirements.txt  server.py  slides-content.md
client-example/: main.ts  package.json
client-example/client/: sdk.gen.ts  types.gen.ts
docs/ai-checkpoint-1/: package.json  slides.md
model/: .gitignore  eval.sh  generate-visualizatons.sh  model.yaml
prepare/: prepare.py
