[project]
name = "ai-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "ludwig>=0.10.4",
    "numpy<2.0",
    "ptitprince>=0.2.7",
    "pydantic>=1.10.24",
    "ruff>=0.14.6",
    "starlette>=0.44.0",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchtext==0.18.0",
    "torchvision==0.18.1",
]
